--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,28 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0;
+  min-height: 100%;
+}
+
+.colorSliderWrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 500px;
+}
+
+.colorBox {
+  display: flex;
+  justify-content: flex-start;
+  border-style: solid;
+  border-color: grey;
+  border-width: 10px;
+  width: 75px;
+  height: 100px;
+  /* width: ; */
 }
